adn: fixed layout issues for card presentation

--- a/Services/ADN/Card/templates/default/checkcard.css
+++ b/Services/ADN/Card/templates/default/checkcard.css
@@ -28,7 +28,6 @@
   margin-right: 15px;
 }
 .Card .CardHeader h1 {
-  font-size: 0.75rem;
   padding: 15px 10px 10px 10px;
   margin: 5px 0 15px 0;
   background-color: #A4BFBF;
@@ -39,18 +38,18 @@
   flex: 3 1 0%;
 }
 .Card .CardBody h1 {
-  font-size: 0.75rem;
+  font-size: 1rem;
   padding: 15px 0px 10px 0px;
   margin: 35px 0 15px 0;
 }
 .Card .CardBody p {
-  font-size: 0.8rem;
+  font-size: 1rem;
 }
 .Card .CardBody .CardSection {
-  font-size: 0.8rem;
+  font-size: 1rem;
 }
 .Card .CardBody .CardSection .CardSectionHead {
-  font-size: 0.8rem;
+  font-size: 1rem;
   display: inline-block;
   margin: 6px 0;
 }
@@ -65,6 +64,7 @@
   border-top: 5px solid #A4BFBF;
   padding: 10px 15px 6px 15px;
   display: flex;
+  width: 100%;
   width: -moz-available;
   position: absolute;
   bottom: 0;
@@ -91,7 +91,7 @@
   font-size: 0.75rem;
 }
 .MessageBox .MessageBoxContent h1 {
-  font-size: 0.75rem;
+  font-size: 1.25rem;
 }
 .MessageBox .FailureMessage {
   display: flex;
