--- a/Services/ADN/Card/templates/default/less/card.less
+++ b/Services/ADN/Card/templates/default/less/card.less
@@ -26,7 +26,6 @@
             }
         }
         h1 {
-            font-size: 0.75rem;
             padding: 15px 10px 10px 10px;
             margin: 5px 0 15px 0;
             background-color: @wsv-green;
@@ -34,20 +33,20 @@
     }
     .CardBody {
         h1 {
-            font-size: 0.75rem;
+            font-size: 1.0rem;
             padding: 15px 0px 10px 0px;
             margin: 35px 0 15px 0;
         }
         p {
-            font-size: 0.8rem;
+            font-size: 1.0rem;
         }
         padding: 0px 15px;
         margin-bottom: 15px;
         flex: 3 1 0%;;
         .CardSection {
-            font-size: 0.8rem;
+            font-size: 1.0rem;
             .CardSectionHead{
-                font-size: 0.8rem;
+                font-size: 1.0rem;
                 display: inline-block;
                 margin: 6px 0;
             }
@@ -64,6 +63,7 @@
         border-top: 5px solid @wsv-green;
         padding: 10px 15px 6px 15px;
         display: flex;
+        width: 100%;
         width: -moz-available;
         position: absolute;
         bottom: 0;
